# LangChain-RAG

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
utils/: DocumentProcessor.py  FallbackHandler.py  LLMBuilder.py  SearchQuery.py
utils/Embeddings/: CUrlEmbeddings.py
utils/LLM/: CUrlLLMBuilder.py  LLMBuilder.py
