[project]
name = "rag-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "bs4>=0.0.2",
    "ipython>=9.3.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-google-genai>=2.1.5",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.8",
    "pandas>=2.3.0",
    "pypdf>=5.6.0",
    "tqdm>=4.67.1",
]
